# chebpol

./: DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.ac
R/: chebpol.R
inst/doc/: CHANGELOG  chebpol.R  chebpol.Rnw  chebusage.R  stalker.R
man/: chebappx.Rd  chebappxf.Rd  chebappxg.Rd  chebappxgf.Rd  chebcoef.Rd  chebeval.Rd  chebknots.Rd  chebpol-package.Rd  evalongrid.Rd  mlappx.Rd  polyh.Rd  ucappx.Rd  ucappxf.Rd
src/: Makevars  Makevars.in  chebpol.c  config.h
tests/: all.R  all.Rout.save
